--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <!-- Change this code here by copy and pasting your template on line 15 -->
 <p>Welcome to your first GitHub Pages website!</p>
 <p>NEW CHANGES MADE THRU GIT</p>
+<h1>Second commit done </h1>
 
 </body>
 </html>
