--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
 
 <!-- Change this code here by copy and pasting your template on line 15 -->
 <p>Welcome to your first GitHub Pages website!</p>
-<h1>Direct commit to master !!!</h1>
+<h1>NOT Direct commit to master !!!</h1>
 </body>
 </html>
